correct colouring and spacing to more closely match source material

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,8 +1,9 @@
 .new-tweet {
-  background-color: #eee;
-  border: 1px solid grey;
+  background-color: #F3F3F3;
+  border: 1px solid #DEDEDE;
   border-radius: 0.5em;
   padding: 0.75em;
+  margin: 0.75em 0;
 }
 
 .new-tweet h2 {
